Доработал файловую систему, продолжил делать адаптивной главную страницу

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Мишка: Каталог</title>
   </head>
-  <body>
-    <header class="page-header container">
+  <body class="screen-width">
+    <header class="page-header">
       <nav class="main-nav">
-        <div class="main-nav__wrapper">
+        <div class="main-nav__wrapper container">
           <div class="logo">
-            <a class="logo__link">
+            <a class="logo__link" href="index.html">
               <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
             </a>
           </div>
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <main class="page-main container">
+    <main class="page-main">
       <h1 class="page-main__title">Каталог товаров</h1>
       <div class="catalog">
         <section class="catalog__item">
@@ -106,8 +106,8 @@
       </div>
     </main>
 
-    <footer class="page-footer container">
-      <section class="social">
+    <footer class="page-footer">
+      <section class="social container">
         <ul class="social__list">
           <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
           <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
