Сделал адаптивную верстку крупных блоков главной страницы (кроме подвала)

--- a/source/index.html
+++ b/source/index.html
@@ -58,33 +58,36 @@
         </ul>
       </section>
 
-      <section class="random-status-product container">
-        <h2 class="random-status-product__name">Вязаные корзинки</h2>
-        <h3 class="random-status-product__status">Товар недели</h3>
-        <div class="random-status-product__specs">
-          <div class="random-status-product__specs-wrapper">
-            <p class="random-status-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-            <ul class="random-status-product__spec-list">
-              <li class="random-status-product__spec-item">
-                <span class="random-status-product__spec-name">Цвет:</span>
-                <span class="random-status-product__value">«Тиффани»/серый</span>
-              </li>
-              <li class="random-status-product__spec-item">
-                <span class="random-status-product__spec-name">Диаметр:</span>
-                <span class="random-status-product__value">25 см</span>
-              </li>
-              <li class="random-status-product__spec-item">
-                <span class="random-status-product__spec-name">Высота:</span>
-                <span class="random-status-product__spec-value">15 см</span>
-              </li>
-            </ul>
-            <div class="random-status-product__order">
-              <p class="random-status-product__order-price">Цена: 990 руб</p>
-              <a class="random-status-product__make-order btn" href="#">Заказать</a>
-            </div>
+      <section class="hit-product container">
+        <div class="hit-product-wrapper">
+          <div class="hit-product__titles">
+            <h2 class="hit-product__name">Вязаные корзинки</h2>
+            <h3 class="hit-product__status">Товар недели</h3>
           </div>
-          <div class="random-status-product__img">
-            <img src="/img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
+          <div class="hit-product__specs">
+              <p class="hit-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+              </p>
+              <ul class="hit-product__spec-list">
+                <li class="hit-product__spec-item">
+                  <span class="hit-product__spec-name">Цвет:</span>
+                  <span class="hit-product__value">«Тиффани»/серый</span>
+                </li>
+                <li class="hit-product__spec-item">
+                  <span class="hit-product__spec-name">Диаметр:</span>
+                  <span class="hit-product__value">25 см</span>
+                </li>
+                <li class="hit-product__spec-item">
+                  <span class="hit-product__spec-name">Высота:</span>
+                  <span class="hit-product__spec-value">15 см</span>
+                </li>
+              </ul>
+              <div class="hit-product__img">
+                <img src="/img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
+              </div>
+              <div class="hit-product__order">
+                <p class="hit-product__order-price">Цена: 990 руб</p>
+                <a class="hit-product__make-order btn" href="#">Заказать</a>
+              </div>
           </div>
         </div>
       </section>
@@ -100,7 +103,7 @@
         </ul>
       </section>
 
-      <section class="opinions container">
+      <section class="opinions">
         <h2 class="opinions__title">Отзывы</h2>
         <div class="opinions__list">
           <blockquote class="opinions__item">
@@ -108,10 +111,10 @@
             <p class="opinions__author">Анастасия Красильникова</p>
             <p class="opinions__email">@misssssiskras</p>
           </blockquote>
+          <div class="opinions__pagination opinions__slider">
+            <button class="opinions__prev-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Предыдущий отзыв</button>
+            <button class="opinions__next-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Следующий отзыв</button>
         </div>
-        <div class="opinions__pagination opinions__slider">
-          <button class="opinions__prev-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Предыдущий отзыв</button>
-          <button class="opinions__next-item" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru">Следующий отзыв</button>
         </div>
         <a class="opinions__write btn" href="#">Написать</a>
       </section>
