--- a/source/form.html
+++ b/source/form.html
@@ -131,17 +131,24 @@
     </main>
 
     <footer class="page-footer">
-      <section class="social container">
-        <ul class="social__list">
-          <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
-          <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
-          <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
-        </ul>
-      </section>
-      <div class="designed">Разработано
-        <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="designed__hidden">HTML Academy</span>
-        </a>
+      <div class="page-footer__wrapper">
+        <div class="page-footer__logo logo hidden">
+          <a class="logo__link">
+            <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+          </a>
+        </div>
+        <section class="social container">
+          <ul class="social__list">
+            <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
+            <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
+            <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+          </ul>
+        </section>
+        <div class="designed container">Разработано
+          <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="designed hidden">HTML Academy</span>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
