--- a/source/index.html
+++ b/source/index.html
@@ -95,11 +95,11 @@
         <h2 class="about-us__title">Коротко о нас:</h2>
         <ul class="about-us__list">
           <li class="about-us__item about-us__item--eco">Экологически<p class="paragraph">чистые материалы</p></li>
-          <li class="about-us__item about-us__item--price">Скандинавский стиль по российской цене</li>
-          <li class="about-us__item about-us__item--like"> Увеличивает лайки на фотографиях</li>
+          <li class="about-us__item about-us__item--price">Скандинавский стиль<p class="paragraph">по российской цене</p></li>
+          <li class="about-us__item about-us__item--like"> Увеличивает лайки<p class="paragraph">на фотографиях</p></li>
           <li class="about-us__item about-us__item--handmade">Связано вручную с любовью и умилением</li>
           <li class="about-us__item about-us__item--homeland">Поддержка отечественного производителя</li>
-          <li class="about-us__item about-us__item--giftwrap">Поставляется в подарочной упаковке</li>
+          <li class="about-us__item about-us__item--giftwrap">Поставляется<p class="paragraph">в подарочной упаковке</p></li>
         </ul>
       </section>
 
@@ -120,39 +120,48 @@
       </section>
 
       <section class="contacts">
-        <h3 class="contacts__title">Контакты</h3>
-        <ul class="contacts__info">
-          <li class="contacts__item">
-            <p class="contacts__type">e-mail:</p>
-            <p class="contacts__data">info@mimimishkashop.ru</p>
-          </li>
-          <li class="contacts__item">
-            <p class="contacts__type">адрес:</p>
-            <p class="contacts__data">г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
-          </li>
-        </ul>
+        <div class="contacts_wrapper">
+          <h3 class="contacts__title">Контакты</h3>
+          <ul class="contacts__info">
+            <li class="contacts__item">
+              <p class="contacts__type">e-mail:</p>
+              <p class="contacts__data">info@mimimishkashop.ru</p>
+            </li>
+            <li class="contacts__item">
+              <p class="contacts__type">адрес:</p>
+              <p class="contacts__data">г. Санкт-Петербург,<br>ул. Большая Конюшенная, д.19/8, офис 101</p>
+            </li>
+          </ul>
+        </div>
         <div class="contacts__maps">
           <div class="contacts__map-item">
             <img class="contacts__map-item" src="/img/map-mobile@1x.jpg" alt="Карта" width="320" height="457">
             <iframe class="contacts__map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
-          <a class="contacts__write-us btn">Напишите нам</a>
         </div>
+        <a class="contacts__write-us btn">Напишите нам</a>
       </section>
     </main>
 
     <footer class="page-footer">
-      <section class="social container">
-        <ul class="social__list">
-          <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
-          <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
-          <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
-        </ul>
-      </section>
-      <div class="designed container">Разработано
-        <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="designed__hidden">HTML Academy</span>
-        </a>
+      <div class="page-footer__wrapper">
+        <div class="page-footer__logo logo hidden">
+          <a class="logo__link">
+            <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+          </a>
+        </div>
+        <section class="social container">
+          <ul class="social__list">
+            <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
+            <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
+            <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+          </ul>
+        </section>
+        <div class="designed container">Разработано
+          <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="designed hidden">HTML Academy</span>
+          </a>
+        </div>
       </div>
     </footer>
 
