Доделал задание по созданию фиксированной адаптивной сетки

--- a/source/index.html
+++ b/source/index.html
@@ -150,13 +150,13 @@
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
-        <section class="social container">
+        <div class="social container">
           <ul class="social__list">
             <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
             <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
             <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
           </ul>
-        </section>
+        </div>
         <div class="designed container">Разработано
           <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="designed hidden">HTML Academy</span>
