Реорганизовал код в лесс-файлах согласно рекоммендациям наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
           <button class="main-nav__toggle" type="button">Открыть меню</button>
           <ul class="main-nav__list main-nav__list--services">
             <li class="main-nav__item">
-              <a class="main-nav__name" href="catalog.html">Каталог товаров</a>
+              <a class="main-nav__name">Каталог товаров</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__name" href="#">Вязание на заказ</a>
@@ -54,7 +54,7 @@
           </a>
           <div class="catalog__description">
             <a class="catalog__title" href="#">
-              <h2>Зайчик-попрыгайчик</h2>
+              <h2 class="catalog__title-name">Зайчик-попрыгайчик</h2>
             </a>
             <p class="catalog__specs">Рост 30 см, вес 200 г</p>
             <div class="catalog__order">
@@ -70,7 +70,7 @@
           </a>
           <div class="catalog__description">
             <a class="catalog__title" href="#">
-              <h2>Корзинка для белья</h2>
+              <h2 class="catalog__title-name">Корзинка для белья</h2>
             </a>
             <p class="catalog__specs">Диаметр 15 см, высота 10 см</p>
             <div class="catalog__order">
@@ -86,7 +86,7 @@
           </a>
           <div class="catalog__description">
             <a class="catalog__title" href="#">
-              <h2>Большая корзинка<p class="paragraph"> для игрушек</p></h2>
+              <h2 class="catalog__title-name">Большая корзинка<p class="paragraph"> для игрушек</p></h2>
             </a>
             <p class="catalog__specs">Диаметр 30 см, высотка 30 см</p>
             <div class="catalog__order">
@@ -119,16 +119,16 @@
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
-        <section class="social container">
-          <ul class="social__list">
-            <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
-            <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
-            <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+        <div class="page-footer__social container">
+          <ul class="page-footer__social-list">
+            <li><a class="page-footer__social-item page-footer__social-item--inst" href="#">Instagram</a></li>
+            <li><a class="page-footer__social-item page-footer__social-item--fb" href="#">Facebook</a></li>
+            <li><a class="page-footer__social-item page-footer__social-item--twit" href="#">Twitter</a></li>
           </ul>
-        </section>
-        <div class="designed container">Разработано
-          <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="designed hidden">HTML Academy</span>
+        </div>
+        <div class="page-footer__designed container">Разработано
+          <a class="page-footer__designed-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class=".page-footer__designed-logo hidden">HTML Academy</span>
           </a>
         </div>
       </div>
