--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
               <a class="main-nav__name" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__name" href="#">Вязание на заказ</a>
+              <a class="main-nav__name" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list main-nav__list--sub-nav">
@@ -33,10 +33,10 @@
             </li>
           </ul>
           <ul class="main-nav__list main-nav__list--news main-nav__list--desktop-only">
-            <li class="main-nav__item main-nav__item--desktop-only">
+            <li class="main-nav__item">
               <a class="main-nav__name" href="#">Новые поступления</a>
             </li>
-            <li class="main-nav__item main-nav__item--desktop-only">
+            <li class="main-nav__item">
               <a class="main-nav__name" href="#">Распродажа</a>
             </li>
           </ul>
@@ -150,16 +150,16 @@
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
-        <div class="social container">
-          <ul class="social__list">
-            <li><a class="social__item social__item--inst" href="#">Instagram</a></li>
-            <li><a class="social__item social__item--fb" href="#">Facebook</a></li>
-            <li><a class="social__item social__item--twit" href="#">Twitter</a></li>
+        <div class="page-footer__social container">
+          <ul class="page-footer__social-list">
+            <li><a class="page-footer__social-item page-footer__social-item--inst" href="#">Instagram</a></li>
+            <li><a class="page-footer__social-item page-footer__social-item--fb" href="#">Facebook</a></li>
+            <li><a class="page-footer__social-item page-footer__social-item--twit" href="#">Twitter</a></li>
           </ul>
         </div>
-        <div class="designed container">Разработано
-          <a class="designed__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="designed hidden">HTML Academy</span>
+        <div class="page-footer__designed container">Разработано
+          <a class="page-footer__designed-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class=".page-footer__designed-logo hidden">HTML Academy</span>
           </a>
         </div>
       </div>
