--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Мишка: Каталог</title>
@@ -21,7 +22,7 @@
               <a class="main-nav__name">Каталог товаров</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__name" href="#">Вязание на заказ</a>
+              <a class="main-nav__name" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list main-nav__list--sub-nav">
