--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Мишка: Главная страница</title>
@@ -32,7 +33,7 @@
               <a class="main-nav__name" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
-          <ul class="main-nav__list main-nav__list--news main-nav__list--desktop-only">
+          <ul class="main-nav__list main-nav__list--news">
             <li class="main-nav__item">
               <a class="main-nav__name" href="#">Новые поступления</a>
             </li>
@@ -136,7 +137,7 @@
         <div class="contacts__maps">
           <div class="contacts__map-item">
             <img class="contacts__map-item" src="/img/map-mobile@1x.jpg" alt="Карта" width="320" height="457">
-            <iframe class="contacts__map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <!--<iframe class="contacts__map-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1333.9094060860168!2d30.32158664059639!3d59.93868183254114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xfbeb3cbd3eed50c8!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCAxMDEsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1516467337505" width="322" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>!-->
           </div>
         </div>
         <a class="contacts__write-us btn">Напишите нам</a>
