Подогнал все блоки главной страницы под макет(мобильник)

--- a/source/index.html
+++ b/source/index.html
@@ -98,9 +98,9 @@
           <li class="about-us__item about-us__item--eco">Экологически<p class="paragraph">чистые материалы</p></li>
           <li class="about-us__item about-us__item--price">Скандинавский стиль<p class="paragraph">по российской цене</p></li>
           <li class="about-us__item about-us__item--like"> Увеличивает лайки<p class="paragraph">на фотографиях</p></li>
-          <li class="about-us__item about-us__item--handmade">Связано вручную с любовью и умилением</li>
+          <li class="about-us__item about-us__item--handmade">Связано вручную с<p class="paragraph">любовью и умилением</li>
           <li class="about-us__item about-us__item--homeland">Поддержка отечественного производителя</li>
-          <li class="about-us__item about-us__item--giftwrap">Поставляется<p class="paragraph">в подарочной упаковке</p></li>
+          <li class="about-us__item about-us__item--giftwrap">Поставляется в<p class="paragraph">подарочной упаковке</p></li>
         </ul>
       </section>
 
@@ -130,7 +130,7 @@
             </li>
             <li class="contacts__item">
               <p class="contacts__type">адрес:</p>
-              <p class="contacts__data">г. Санкт-Петербург,<br>ул. Большая Конюшенная, д.19/8, офис 101</p>
+              <p class="contacts__data">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д.19/8, офис 101</p>
             </li>
           </ul>
         </div>
@@ -151,7 +151,7 @@
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
-        <div class="page-footer__social container">
+        <div class="page-footer__social">
           <ul class="page-footer__social-list">
             <li><a class="page-footer__social-item page-footer__social-item--inst" href="#">Instagram</a></li>
             <li><a class="page-footer__social-item page-footer__social-item--fb" href="#">Facebook</a></li>
